  option. Before this change only incoming requests supporting HTTP/2 would
  be traced. ({pull}2143[#2143])

[float]
===== Bug fixes

* Fix a header object re-use bug that prevented propagation of trace-context
  headers (`traceparent` et al) in AWS requests using AWS v4 signature auth.
  ({issues}2134[#2134])


[[release-notes-3.17.0]]
==== 3.17.0 2021/07/05

[float]
===== Features

* Add instrumentation of all AWS S3 methods when using the
  https://www.npmjs.com/package/aws-sdk[JavaScript AWS SDK v2] (`aws-sdk`).
* Add <<disable-send, `disableSend`>> configuration option. This supports some
  use cases using the APM agent **without** an APM server. ({issues}2101[#2101])

* Add instrumentation of all DynamoDB methods when using the
  https://www.npmjs.com/package/aws-sdk[JavaScript AWS SDK v2] (`aws-sdk`).

[float]
===== Bug fixes

* Fix inconsistencies in HTTP spans from other APM agents.
  <<span-subtype, `span.subtype`>> will now be "http" for HTTP, HTTPS, and
  HTTP/2 outgoing spans -- previously it was "http", "https", "http2",
  respectively. As well, <<span-action, `span.action`>> will now be the HTTP
  method (e.g. "GET", "PUT", "POST"), rather than "http". ({pull}2075[#2075])

* Fixed error where SQS messages sent without an active transactions could
  crash the agent. ({issues}2113[#2113])

* Fixed support for proxies in destination context ({issues}1770[#1770])

[[release-notes-3.16.0]]
==== 3.16.0 - 2021/06/14

[float]
===== Features

* Added <<span-frames-min-duration, `spanFramesMinDuration`>>
  configuration field, allowing users to set a time threshold value that spans
  must reach before the agent will add a stack trace to the span. As a result,
  many short spans that previously included stack traces by default no longer
  will.

* Prefer W3C "traceparent" header over "elastic-apm-traceparent" for incoming
  requests. {pull}2079[#2079]

[float]
===== Bug fixes

* Fix a crash (`TypeError: lastPrepareStackTrace`) in the agent when used with