@@ -57,7 +57,25 @@ const frameCacheStats = {
   misses: 0
 }
 
+let lastCwd = process.cwd()
+
 // ---- internal support functions
+
+// process.cwd() can throw EMFILE if hitting the `ulimit -Hn`. A process's
+// cwd should not change regularly, so falling back to the previous one is fine.
+// At worst the stacktrace frame.filename values will be relative to an old
+// directory.
+function getCwd (log) {
+  let cwd
+  try {
+    cwd = process.cwd()
+  } catch (ex) {
+    log.trace(ex, 'error getting cwd: fallback back to %s', lastCwd)
+    return lastCwd
+  }
+  lastCwd = cwd
+  return cwd
+}
 
 // If gathering a stacktrace from the structured CallSites fails, this is
 // used as a fallback: parsing the `err.stack` *string*.
@@ -81,7 +99,7 @@ function stackTraceFromErrStackString (log, err) {
   }
 
   if (frames) {
-    const cwd = process.cwd()
+    const cwd = getCwd(log)
     for (var i = 0; i < frames.length; i++) {
       const frame = frames[i]
       const filename = frame.getFileName() || ''
@@ -406,7 +424,7 @@ function gatherStackTrace (log, err, sourceLinesAppFrames, sourceLinesLibraryFra
     if (filterCallSite) {
       callsites = callsites.filter(filterCallSite)
     }
-    const cwd = process.cwd()
+    const cwd = getCwd(log)
     for (let i = 0; i < callsites.length; i++) {
       frameFromCallSite(
         log,
